--- a/AlgorytmGenetyczny/AlgorytmGenetyczny.csproj
+++ b/AlgorytmGenetyczny/AlgorytmGenetyczny.csproj
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Liczba.cs" />
+    <Compile Include="Osobnik.cs" />
+    <Compile Include="Populacja.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
